# python-webapp-dev

./: .breakpoints  LICENSE  README.md  app.py  pyproject.toml
templates/: footer.html  index.html  nav.html
