[tool.poetry]
name = "repl-nix-python-webapp-dev"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_python_webapp_dev"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
